[package]
name = "envd-macros"
version = "0.3.0"
edition = "2024"
description = "Proc macros for gmodx-rs"
repository = "https://github.com/Srlion/gmodx-rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
envd-parser = { path = "../envd-parser", version = "0.1.0" }
proc-macro2 = "1"
quote = "1.0.45"
syn = { version = "2" }
